<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/name_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/shape_curved_edit_text_background"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_title_tv" />

        <TextView
            android:id="@+id/name_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_error"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_et" />

        <TextView
            android:id="@+id/email_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_error_tv" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/shape_curved_edit_text_background"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title_tv" />

        <TextView
            android:id="@+id/email_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_error"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <TextView
            android:id="@+id/birth_date_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_error_tv" />

        <TextView
            android:id="@+id/birth_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/shape_curved_edit_text_background"
            android:hint="@string/date_of_birth_hint"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_title_tv" />

        <TextView
            android:id="@+id/birth_date_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth_error"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_et" />

        <Button
            android:id="@+id/register_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_curved_button_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_error_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>