<resources>
    <string name="app_name">Registration</string>

    <string name="registration_form_screen_title">Registration Form</string>
    <string name="confirmation_screen_title">Confirm Your Data</string>
    <string name="registered_users_screen_title">Registered Users So Far</string>

    <string name="register">Register</string>
    <string name="name_title">Name</string>
    <string name="email_title">Email</string>
    <string name="date_of_birth_title">Date of birth</string>
    <string name="name_hint">(e.g. Luis)</string>
    <string name="email_hint">(e.g. luis@a.bc)</string>
    <string name="date_of_birth_hint">(e.g. 2019&#8211;05&#8211;22)</string>
    <string name="fill_all_fields">Please, fill in all fields.</string>

    <string name="name_error">Name must have at least one character</string>
    <string name="email_error">Email must have at least one character before the @ and at least four characters after it, for the domain.\nAt least one of the domain characters must be a dot (.) and after it you must always have 2 other characters. E.g. l@a.bc</string>
    <string name="date_of_birth_error">Date of birth must be between Jan 1, 1900 and today and must respect the pattern yyyy&#8211;MM&#8211;dd (e.g. 2019&#8211;05&#8211;22)</string>

    <string name="confirmation_notice">Thank you for registering!\nThe data you registered with is as follows:</string>

    <string name="confirmation_name">Name: %s</string>
    <string name="confirmation_email">Email: %s</string>
    <string name="confirmation_birth_date">Birth Date: %s</string>

    <string name="registered_users">registered users (extra)</string>

    <string name="clear">Clear</string>
    <string name="list">List</string>
    <string name="ok">OK</string>

    <string name="get_user_error">Something failed getting your info!</string>
    <string name="add_user_error">Something failed saving your info! Try again!</string>
    <string name="get_all_users_error">Something failed getting all users!</string>
    <string name="remove_all_users_error">Something failed removing all users!</string>
</resources>